--- a/3-results.tex
+++ b/3-results.tex
@@ -24,7 +24,7 @@
         \subsubsection{Enabling precision medicine}\label{sec:precision_med}
     
             The application to precision medicine involves predicting outcomes conditioned on a patient's current state and history. Simulated trajectories could help inform clinical decision making by quantifying disease progression and outcomes and have a transformative effect on healthcare \cite{walsh2020generating, Fisher2019}. Ensembles of stochastic simulations of individual patient profiles such as those produced by \gls{crmb} could help quantify risk at an unprecedented level of granularity \cite{Fisher2019}.\par
-            Predicting patient-specific responses to drugs is still a new field of research, a problem known as \gls{ite}. Estimating \glspl{ite} is persistently hampered by the lack of paired counterfactual samples \cite{Yoon2018-ite, chu2019treatment}. To solve similar problems n medical imaging, various \gls{gan} algorithms were developed for domain translation, mapping a sample from its to original class to the paired equivalent. This includes bidirectional transformations, allowing \gls{gan} to learn mappings from very few, or a lack of paired samples \cite{Wolterink2017DeepMT, CycleGAN2017, mcdermott2018semi}.
+            Predicting patient-specific responses to drugs is still a new field of research, a problem known as \gls{ite}. Estimating \glspl{ite} is persistently hampered by the lack of paired counterfactual samples \cite{Yoon2018-ite, chu2019treatment}. To solve similar problems in medical imaging, various \gls{gan} algorithms were developed for domain translation, mapping a sample from its to original class to the paired equivalent. This includes bidirectional transformations, allowing \gls{gan} to learn mappings from very few, or a lack of paired samples \cite{Wolterink2017DeepMT, CycleGAN2017, mcdermott2018semi}.
     
         \subsubsection{From patient and disease models to digital twins}\label{sec:models_twins}
     
