--- a/4-discussion.tex
+++ b/4-discussion.tex
@@ -68,7 +68,7 @@ To build statistical models we define rules and relations that they are forced t
 
 We build enormous models and let them fight back and forth in a mim-max battle that goes on forever, denying them our valuable knowledge. The idea of introducing human knowledge in the otherwise naive training process has gained some attention.\par
 
-Posterior regularization is usually used to impose constraints on probabilistic models, but \glspl{gan} lack the necessary Bayesian component. In the student-teacher model, where a larger model is used to train a smaller one, the process as knowledge distillation. Such models are developed for many applications, such as compression, improving accuracy and accelerating training \cite{abbasi2019odeling}.
+Posterior regularization is usually used to impose constraints on probabilistic models, but \glspl{gan} lack the necessary Bayesian component. In the student-teacher model, where a larger model is used to train a smaller one, the process is knowledge distillation. Such models are developed for many applications, such as compression, improving accuracy and accelerating training \cite{abbasi2019odeling}.
 
 In the field of \gls{rl}, a mathematical correspondence between \gls{ps} and \gls{rl} led to the probabilistic \gls{pr} framework \gls{irl} that seeks to learn a reward function from expert demonstrations. This was followed by approaches capable of learning both the reward function and the policy \cite{finn2016guided,fu2018learning}. \citeauthor{Hu2018} then demonstrated a correspondence between \glspl{rl} and \glspl{gan}. This allowed them to develop a \gls{gan} with a constraint-based learning objective \cite{Hu2018}.\par
 
